deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-envoy
spec:
  selector:
    app: front-envoy
  ports:
  - protocol: TCP
    port: 8001
    name: admin
  - protocol: TCP
    port: 8443
    name: proxy
