deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: envoy-front
spec:
  port:
    targetPort: proxy
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: front-envoy
    weight: 100
